--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.9",
         "leandrocfe/filament-apex-charts": "^3.1",
         "leandrocfe/filament-ptbr-form-fields": "^3.0",
+        "livewire/livewire": "^3.5",
         "predis/predis": "^2.3",
         "pxlrbt/filament-excel": "^2.3",
         "rmsramos/activitylog": "^1.0"
