--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 /node_modules
 /public/build
 /public/hot
-/public/storage
 /storage/*.key
+/storage/*.log
+!/storage/app/public
 /storage/pail
 /vendor
 .env
@@ -21,3 +22,4 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
+/storage
