--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 /node_modules
 /public/build
 /public/hot
+/public/storage
 /storage/*.key
-/storage/*.log
-!/storage/app/public
 /storage/pail
 /vendor
 .env
@@ -22,4 +21,3 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
-/storage
